backends/typescript/src/interact/snapshots/ridl_backend_ts__interact__tests__services_named_reference_and_inline_shape.snap
---
source: backends/typescript/src/interact/tests.rs
expression: source
---
/**
 * What a signal read is standing on (ridl §4.5). `'init'` — the provider has
 * not published yet and the value is the channel init (ridl §4.4); `'live'` —
 * a published value; `'invalid'` — the channel is in the invalid state
 * because a published payload violated its constraints, and the value is the
 * last good one. A read always yields a value; provenance is what says
 * whether to act on it. Invalidity is never hidden from a subscriber.
 */
export type Provenance = 'init' | 'live' | 'invalid';

/**
 * A consumer's handle on a signal (ridl §4): continuous state, never empty —
 * the channel holds a value from the moment it exists, so a read always
 * succeeds and a subscription delivers immediately (ridl §4.4).
 * `subscribe` returns the function that cancels it.
 */
export interface SignalHandle<T> {
  read(): { value: T; provenance: Provenance };
  subscribe(fn: (value: T, provenance: Provenance) => void): () => void;
}

/**
 * A consumer's handle on an event (ridl §5): discrete occurrences, with no
 * readable current value — an event that has not occurred has nothing to
 * read. `subscribe` returns the function that cancels it.
 */
export interface EventHandle<T> {
  subscribe(fn: (occurrence: T) => void): () => void;
}

/**
 * The result of a fallible query (ridl §7, gf §6.1): a declared Stratum-1
 * outcome the provider owns. A transport failure is not an `error` here — it
 * rejects the promise instead, an infrastructure failure — detected, undeclared (gf §6.4).
 */
export type Result<T, E> =
  | { ok: true; value: T }
  | { ok: false; error: E };

/**
 * The consumer face of this interface (ridl §14): what code holding a
 * binding to it sees. Signals are read and subscribed, events are
 * subscribed, commands and queries are called, finals are read.
 */
export interface CruiseControlConsumer {
  /**
   * @init false
   * @provenance `'init'` until the provider's first publication (ridl §4.4).
   */
  engaged: SignalHandle<Engaged>;
}

/**
 * The provider face of this interface (ridl §14): what code realizing it
 * implements. Signals and events are published, commands and queries are
 * handled, finals are supplied at binding initialization.
 */
export interface CruiseControlProvider {
  /**
   * @init false
   */
  engaged: { publish(value: Engaged): void };
}

/**
 * Resolved timing (ridl §9): `minUs` is the rate floor, `maxUs` the
 * staleness bound, both in microseconds. `defaultApplied` marks a bound the
 * compiler resolved from the configured default rather than from source —
 * "untimed" does not exist beyond the parser (ridl §9.1).
 */
export const cruiseControlTiming = {
  engaged: { mode: 'strict-periodic', minUs: 50000n, maxUs: 50000n, defaultApplied: false },
} as const;

/**
 * The require/ensure clauses of this interface, as data (ridl §13). `id` is
 * the observer-stub identity `<Interface>.<interaction>.<kind>[n]`; `source`
 * is the canonical expression text; `signals` and `params` name what the
 * expression reads.
 */
export const cruiseControlContracts = [] as const;

/**
 * This is the inline shape of service `veh.adas.logs` (ridl §14.5). The
 * shape is anonymous in source, so its generated name is
 * `Service_veh_adas_logs` — a TypeScript identifier derived from the service
 * name, because a TypeScript identifier cannot contain dots. The service's
 * own identity stays the dotted `veh.adas.logs`: that is what the `services`
 * map is keyed by, what a runtime resolves, and what observer-stub ids are
 * prefixed with. The generated name and the dotted address are deliberately
 * different things; neither substitutes for the other.
 *
 * The consumer face of this interface (ridl §14): what code holding a
 * binding to it sees. Signals are read and subscribed, events are
 * subscribed, commands and queries are called, finals are read.
 */
export interface Service_veh_adas_logsConsumer {
  /**
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  tailLogs(pattern: AsyncIterable<string>): AsyncIterable<LogLine>;
}

/**
 * This is the inline shape of service `veh.adas.logs` (ridl §14.5). The
 * shape is anonymous in source, so its generated name is
 * `Service_veh_adas_logs` — a TypeScript identifier derived from the service
 * name, because a TypeScript identifier cannot contain dots. The service's
 * own identity stays the dotted `veh.adas.logs`: that is what the `services`
 * map is keyed by, what a runtime resolves, and what observer-stub ids are
 * prefixed with. The generated name and the dotted address are deliberately
 * different things; neither substitutes for the other.
 *
 * The provider face of this interface (ridl §14): what code realizing it
 * implements. Signals and events are published, commands and queries are
 * handled, finals are supplied at binding initialization.
 */
export interface Service_veh_adas_logsProvider {
  /**
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  tailLogs(pattern: AsyncIterable<string>): AsyncIterable<LogLine>;
}

/**
 * Resolved timing (ridl §9): `minUs` is the rate floor, `maxUs` the
 * staleness bound, both in microseconds. `defaultApplied` marks a bound the
 * compiler resolved from the configured default rather than from source —
 * "untimed" does not exist beyond the parser (ridl §9.1).
 */
export const service_veh_adas_logsTiming = {} as const;

/**
 * The require/ensure clauses of this interface, as data (ridl §13). `id` is
 * the observer-stub identity `<Interface>.<interaction>.<kind>[n]`; `source`
 * is the canonical expression text; `signals` and `params` name what the
 * expression reads.
 */
export const service_veh_adas_logsContracts = [] as const;

/**
 * The services this package publishes (ridl §14.5). Each key is the dotted
 * global service name — the address a runtime resolves and the prefix of the
 * observer-stub ids — and `interface` names the generated TypeScript
 * interface behind it. The two are deliberately different spellings of
 * different things: the dotted name is the service's identity, while the
 * generated name is a TypeScript identifier, which cannot contain dots. The
 * faces of an entry named `Foo` are `FooConsumer` and `FooProvider`.
 */
export const services = {
  'veh.adas.cruise': { interface: 'CruiseControl' },
  'veh.adas.logs': { interface: 'Service_veh_adas_logs' },
} as const;
